Include new component rxjs

--- a/src/app/pages/array-methods/array-methods.component.scss
+++ b/src/app/pages/array-methods/array-methods.component.scss
@@ -1,7 +1,7 @@
 .c-content{
     margin-top: 40px;
-    margin-left: 5%;
-    margin-right: 5%;
+    // margin-left: 5%;
+    // margin-right: 5%;
     &__card{
         margin-bottom: 20px;
     }
